--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,21 @@
 name: Deploy Worker
 on:
   push:
-  pull_request:
-  repository_dispatch:
+    branches:
+      - master
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    needs: test
+    name: Deploy
     steps:
-      - uses: actions/checkout@v2
-      - name: Build & Deploy Worker
+      uses: cloudflare/wrangler-action@v3
+      name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
+      env:
+        R2_DOMAIN: ${{ secrets.R2_DOMAIN }}
+        PASSWORD: ${{ secrets.PASSWORD }}
+        SIGN_KEY: ${{ secrets.SIGN_KEY }}
