--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
-      uses: cloudflare/wrangler-action@v3
-      name: Deploy
+      - uses: cloudflare/wrangler-action@v3
+      - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-      env:
-        R2_DOMAIN: ${{ secrets.R2_DOMAIN }}
-        PASSWORD: ${{ secrets.PASSWORD }}
-        SIGN_KEY: ${{ secrets.SIGN_KEY }}
+        env:
+          R2_DOMAIN: ${{ secrets.R2_DOMAIN }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          SIGN_KEY: ${{ secrets.SIGN_KEY }}
