--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+wrangler.toml
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
@@ -172,5 +174,7 @@ dist
 .wrangler/
 
 .vscode/
+
+
 
 
